syntax = "proto3";

package launcherg.sync;

// DMM 向けゲーム同期リクエスト
message DmmSyncGamesRequest {
  repeated DmmGame games = 1;
  string extension_id = 2;
}

// DLsite 向けゲーム同期リクエスト
message DlsiteSyncGamesRequest {
  repeated DlsiteGame games = 1;
  string extension_id = 2;
}

// DMM のゲームデータ
message DmmGame {
  string id = 1;
  string category = 2;    // "mono" | "digital"
  string subcategory = 3; // "doujin" | "pcgame"
}

// DLsite のゲームデータ
message DlsiteGame {
  string id = 1;
  string category = 2; // "ai" | "maniax" | "bl" | "home" | "appx" | "girls" | "pro" | "girls-pro" | "soft"
}

// ゲーム同期結果のバッチレスポンス
message SyncBatchResult {
  uint32 success_count = 1;
  uint32 error_count = 2;
  repeated string errors = 3;
  repeated string synced_games = 4;  // ゲームタイトルのリスト
}